--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@
   border-radius: 19px;
 }
 
+@media (min-width: 900px) {
+  .sidebar {
+    position: relative;
+  }
+}
+
 @media (max-width: 768px) {
   .container {
     flex-direction: column;
@@ -50,7 +56,7 @@
 .main-content {
   flex: 1;
   /* background-color: rgb(10, 10, 10); */
-  padding: 20px;
+  padding: 10px;
 }
 
 body {
@@ -63,15 +69,39 @@ body {
   padding: 20px;
 }
 
-#content {
+/* #content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
   gap: 50px;
   padding: 50px;
   justify-content: center;
   text-align: center;
   border: 1px solid black;
+} */
+#content {
+  display: grid;
+  /* grid-template-columns: 1fr; */
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  padding: 20px;
+  justify-content: center;
+  text-align: center;
 }
+
+@media (min-width: 600px) {
+  #content {
+    /* grid-template-columns: repeat(2, 1fr); */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+}
+
+@media (min-width: 900px) {
+  #content {
+    grid-template-columns: repeat(3, 300px);
+  }
+}
+
 @media (max-width: 768px) {
   #content {
     gap: 20px;
@@ -205,7 +235,7 @@ body {
 }
 
 #Reports-n-Analytics {
-  grid-column: 1 / -1;
+  /* grid-column: 1 / -1; */
   background-color: #f0f4f8;
   border-radius: 15px;
   padding: 20px;
